<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical" >

    <include layout="@layout/actionbar_port_about_layout" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resttime"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0s"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/hind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text=""
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="7" >

            <com.example.drawsomethingfun.view.DrawView
                android:id="@+id/drawView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:background="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/answerLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" >

            <EditText
                android:id="@+id/editanswer"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="@string/hindtoguess" />

            <Button
                android:id="@+id/sendanswer"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:text="@string/sendanswer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ready"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/ready"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/pen"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/pen"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/clear"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>