<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/actionbar_port_about_layout" />
	
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="180dp"
            android:layout_height="180dp"
			android:layout_marginTop="80dp"          
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/about_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_gray" />

        <TextView
            android:id="@+id/about_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_marginTop="100dp"
            android:textColor="@color/dark_gray" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/dark_gray" />
    </LinearLayout>

</LinearLayout>
